added y teleport for left slipgate

--- a/TODO
+++ b/TODO
@@ -40,8 +40,8 @@ Momentum, normal-wise:
 	✔ up-right @done(23-05-19 17:40)
 	✔ left-left @done(23-05-19 18:32)
 	✔ left-right @done(23-05-19 18:32)
-	☐ left-down
-	☐ left-up
+	✔ left-down @done(23-05-19 18:53)
+	✔ left-up @done(23-05-19 18:53)
 	☐ right-right
 	☐ right-left
 	☐ right-down
