basic slipgate shooting

--- a/TODO
+++ b/TODO
@@ -6,11 +6,12 @@ General:
 	✔ Jumping @done(23-05-19 14:33)
 	✔ X collisions @done(23-05-19 15:57)
 	✔ Air control X @done(23-05-19 17:41)
-	☐ Shooting portals (raycast)
+	✔ Basic shooting slipgates @done(23-05-21 17:41)
+	☐ Better shooting slipgates (raycast)
 	☐ Entrance/exit tiles
 	☐ Basic cube
 	☐ Picking up objects
-	☐ Fix overlapping portals
+	☐ Fix overlapping slipgates
 	☐ Abyss
 	☐ Cube spawner
 	☐ Basic turrets
