--- a/TODO
+++ b/TODO
@@ -7,8 +7,8 @@ General:
 	✔ X collisions @done(23-05-19 15:57)
 	✔ Air control X @done(23-05-19 17:41)
 	✔ Basic shooting slipgates @done(23-05-21 17:41)
+	✔ Better shooting slipgates (raycast) @done(23-05-22 18:44)
 	☐ Tile update queue (from aminer, charena, germz, openfire, or custom)
-	☐ Better shooting slipgates (raycast)
 	☐ Entrance/exit tiles
 	☐ Basic cube
 	☐ Picking up objects
