--- a/TODO
+++ b/TODO
@@ -8,17 +8,19 @@ General:
 	✔ Air control X @done(23-05-19 17:41)
 	✔ Basic shooting slipgates @done(23-05-21 17:41)
 	✔ Better shooting slipgates (raycast) @done(23-05-22 18:44)
+	✔ Figure out the artstyle - quake 1-esque @done(23-05-22 19:07)
+	✔ Basic cube @done(23-05-22 19:53)
+	☐ Picking up cubes
+	☐ Collisions with cubes
 	☐ Tile update queue (from aminer, charena, germz, openfire, or custom)
 	☐ Entrance/exit tiles
-	☐ Basic cube
-	☐ Picking up objects
 	☐ Fix overlapping slipgates
 	☐ Abyss
 	☐ Cube spawner
 	☐ Basic turrets
 	☐ Multi-bob character body
-	☐ Figure out the artstyle
 	☐ Bigger max velocity
+	☐ Increase precision of trig tables for better aiming accuracy
 
 Tiles:
 	☐ Red beam
@@ -27,6 +29,7 @@ Tiles:
 	☐ Button
 	☐ Electricity fields
 	☐ No-portal wall
+	☐ Spikes
 
 Misc objects:
 	☐ Lifts
