--- a/TODO
+++ b/TODO
@@ -11,7 +11,8 @@ General:
 	✔ Figure out the artstyle - quake 1-esque @done(23-05-22 19:07)
 	✔ Basic box @done(23-05-22 19:53)
 	✔ Basic box pickup @done(23-05-22 21:13)
-	☐ Death and restart
+	✔ Health system @done(23-05-24 14:32)
+	☐ Restarting map
 	☐ Collisions with boxes
 	☐ Tile update queue (from aminer, charena, germz, openfire, or custom)
 	☐ Entrance/exit tiles
@@ -32,7 +33,7 @@ Box pickup refinements:
 Tiles:
 	✔ No-portal wall @done(23-05-23 14:44)
 	✔ Impassable (blue) beam @done(23-05-23 15:02)
-	☐ Death (red) beam
+	✔ Death (red) beam @done(23-05-24 14:31)
 	☐ Electricity floor/ceil
 	☐ Button
 	☐ Togglable wall
