added level restart

--- a/TODO
+++ b/TODO
@@ -12,7 +12,7 @@ General:
 	✔ Basic box @done(23-05-22 19:53)
 	✔ Basic box pickup @done(23-05-22 21:13)
 	✔ Health system @done(23-05-24 14:32)
-	☐ Restarting map
+	✔ Restarting map @done(23-05-24 16:09)
 	☐ Collisions with boxes
 	☐ Tile update queue (from aminer, charena, germz, openfire, or custom)
 	☐ Entrance/exit tiles
