--- a/TODO
+++ b/TODO
@@ -14,6 +14,8 @@ General:
 	✔ Health system @done(23-05-24 14:32)
 	✔ Restarting map @done(23-05-24 16:09)
 	✔ Transitions between levels @done(23-05-25 09:44)
+	✔ Button interactions with player @done(23-05-26 16:11)
+	☐ Variable box amount in map
 	☐ Menu
 	☐ Outro screen
 	☐ Collisions with boxes
