implemented slipgating from top direction

--- a/TODO
+++ b/TODO
@@ -75,9 +75,9 @@ Momentum, normal-wise:
 	✔ right-left @done(23-05-19 19:18)
 	✔ right-down @done(23-05-19 19:18)
 	✔ right-up @done(23-05-19 19:18)
-	☐ down-down
-	☐ down-up
-	☐ down-left
-	☐ down-right
+	✔ down-down @done(23-05-27 10:04)
+	✔ down-up @done(23-05-27 10:04)
+	✔ down-left @done(23-05-27 10:04)
+	✔ down-right @done(23-05-27 10:04)
 
 Test chambers:
