--- a/TODO
+++ b/TODO
@@ -26,19 +26,20 @@ General:
 	☐ Entrance tiles
 	☐ Fix overlapping slipgates
 	☐ Abyss (kills players and boxes)
-	☐ Make sure lethal blocks doesn't destroy and collide with boxes
 	☐ Basic turrets (11 chambers)
 	☐ Cube spawner (1 chamber)
 	☐ Multi-bob character body
 	☐ Bigger max velocity
 	☐ Increase precision of trig tables for better aiming accuracy
+	☐ Treat unpaired slipgate as a wall
 
-Box pickup refinements:
+Boxes:
 	✔ Generalize @done(23-05-26 20:26)
 	☐ Constrain range
 	☐ Velocity-based instead of position-based
 	☐ Turn off gravity during pickup
-	☐ Collision tiles?
+	☐ Make sure lethal/force tiles doesn't destroy and collide with boxes
+	✘ Collision tiles? @cancelled(23-05-27 12:12)
 
 Tiles:
 	✔ No-portal wall @done(23-05-23 14:44)
@@ -46,13 +47,14 @@ Tiles:
 	✔ Death (red) beam @done(23-05-24 14:31)
 	✔ Button @done(23-05-25 20:36)
 	☐ Electricity floor/ceil (7 chambers)
-	☐ Togglable wall (3 chambers)
+	☐ Togglable slipgate wall (3 chambers)
 
-Energy ball (10 chambers):
+Bouncers (10 chambers):
 	✔ Bounce from walls @done(23-05-27 09:26)
 	✔ Receiver button @done(23-05-27 10:31)
 	✔ Limited lifespan and respawns @done(23-05-27 11:51)
-	☐ Spawner
+	✔ Spawner @done(23-05-27 12:52)
+	☐ Make sure lethal/force tiles doesn't destroy and collide with bouncers
 	☐ Collision with objects - kill player
 
 Misc objects:
