disabled debug tracer draw

--- a/TODO
+++ b/TODO
@@ -26,6 +26,7 @@ General:
 	✔ Tile update queue - custom, hashset-esque @done(23-05-30 21:02)
 	✔ Story text on top of level @done(23-06-08 11:06)
 	✔ Bitmap-based tiles @done(23-06-08 14:24)
+	✔ Increase precision of trig tables for better aiming accuracy @done(23-06-09 21:50)
 	☐ Editable story text
 	☐ Multi-bob character body
 	☐ Edit mode
@@ -34,7 +35,7 @@ General:
 	☐ Outro screen
 	☐ Entrance tiles
 	☐ Bigger max velocity
-	☐ Increase precision of trig tables for better aiming accuracy
+	☐ Increase tracer precision around 0/90/180/270 angles
 	✘ Abyss - tile that kills players and objects, invisible 3 rows under map? @cancelled(23-05-28 11:26)
 
 Boxes:
