added  velocity-based box dragging

--- a/TODO
+++ b/TODO
@@ -52,7 +52,8 @@ Boxes:
 	✔ Generalize @done(23-05-26 20:26)
 	✔ Turn off gravity during pickup @done(23-06-13 11:45)
 	✔ Constrain range @done(23-06-13 12:10)
-	☐ Velocity-based dragging instead of position-based
+	✔ Velocity-based dragging instead of position-based @done(23-06-13 12:27)
+	☐ Fix physics glitches
 	☐ Collisions between player and boxes - needed?
 
 Tiles:
