slipgate box with player

--- a/TODO
+++ b/TODO
@@ -54,6 +54,7 @@ Boxes:
 	✔ Constrain range @done(23-06-13 12:10)
 	✔ Velocity-based dragging instead of position-based @done(23-06-13 12:27)
 	✔ Fix physics glitches @done(23-06-13 13:20)
+	✔ Teleport with player @done(23-06-13 13:52)
 	✘ Collisions between player and boxes - needed? @cancelled(23-06-13 13:20)
 
 Tiles:
