autotiles for turrets  and exits

--- a/TODO
+++ b/TODO
@@ -51,12 +51,12 @@ Editor:
 	☐ Autotiles
 		✔ Walls @done(23-06-22 17:50)
 		✔ Buttons @done(23-06-22 19:43)
+		✔ Exits @done(23-06-22 21:16)
+		✔ Turrets @done(23-06-22 22:00)
 		☐ Doors
 		☐ Grates
 		☐ Death fields
-		☐ Turrets
 		☐ Slipgates
-		☐ Exits
 		☐ Spikes
 		☐ Bouncers
 		☐ Slipgates
