added autotiles for door movement

--- a/TODO
+++ b/TODO
@@ -56,7 +56,7 @@ Editor:
 		✔ Doors @done(23-06-23 14:41)
 		✔ Grates @done(23-06-23 14:41)
 		✔ Death fields @done(23-06-23 14:41)
-		☐ Opened doors
+		✔ Opened doors @done(23-06-23 17:00)
 		☐ Spikes
 		☐ Bouncers
 		☐ Slipgates
