added autotiles for spikes

--- a/TODO
+++ b/TODO
@@ -57,7 +57,7 @@ Editor:
 		✔ Grates @done(23-06-23 14:41)
 		✔ Death fields @done(23-06-23 14:41)
 		✔ Opened doors @done(23-06-23 17:00)
-		☐ Spikes
+		✔ Spikes @done(23-06-23 17:26)
 		☐ Bouncers
 		☐ Slipgates
 
