--- a/TODO
+++ b/TODO
@@ -59,7 +59,7 @@ Editor:
 		✔ Death fields @done(23-06-23 14:41)
 		✔ Opened doors @done(23-06-23 17:00)
 		✔ Spikes @done(23-06-23 17:26)
-		☐ Bouncer source and receiver
+		✔ Bouncer source and receiver @done(23-06-24 12:35)
 		☐ Non-slipgatables
 
 Boxes:
