--- a/TODO
+++ b/TODO
@@ -49,7 +49,7 @@ Game flow:
 Editor:
 	☐ Editable story text
 	☐ Togglable edit mode
-	☐ Autotiles
+	✔ Autotiles @done(23-06-24 13:53)
 		✔ Walls @done(23-06-22 17:50)
 		✔ Buttons @done(23-06-22 19:43)
 		✔ Exits @done(23-06-22 21:16)
@@ -60,7 +60,7 @@ Editor:
 		✔ Opened doors @done(23-06-23 17:00)
 		✔ Spikes @done(23-06-23 17:26)
 		✔ Bouncer source and receiver @done(23-06-24 12:35)
-		☐ Non-slipgatables
+		✔ Non-slipgatables @done(23-06-24 13:53)
 
 Boxes:
 	✔ Generalize @done(23-05-26 20:26)
