--- a/TODO
+++ b/TODO
@@ -49,18 +49,20 @@ Game flow:
 Editor:
 	☐ Editable story text
 	☐ Togglable edit mode
-	✔ Autotiles @done(23-06-24 13:53)
-		✔ Walls @done(23-06-22 17:50)
-		✔ Buttons @done(23-06-22 19:43)
-		✔ Exits @done(23-06-22 21:16)
-		✔ Turrets @done(23-06-22 22:00)
-		✔ Doors @done(23-06-23 14:41)
-		✔ Grates @done(23-06-23 14:41)
-		✔ Death fields @done(23-06-23 14:41)
-		✔ Opened doors @done(23-06-23 17:00)
-		✔ Spikes @done(23-06-23 17:26)
-		✔ Bouncer source and receiver @done(23-06-24 12:35)
-		✔ Non-slipgatables @done(23-06-24 13:53)
+
+Autotiles:
+	✔ Walls @done(23-06-22 17:50)
+	✔ Buttons @done(23-06-22 19:43)
+	✔ Exits @done(23-06-22 21:16)
+	✔ Turrets @done(23-06-22 22:00)
+	✔ Doors @done(23-06-23 14:41)
+	✔ Grates @done(23-06-23 14:41)
+	✔ Death fields @done(23-06-23 14:41)
+	✔ Opened doors @done(23-06-23 17:00)
+	✔ Spikes @done(23-06-23 17:26)
+	✔ Bouncer source and receiver @done(23-06-24 12:35)
+	✔ Non-slipgatables @done(23-06-24 13:53)
+	✔ Pipes @done(23-06-24 18:34)
 
 Boxes:
 	✔ Generalize @done(23-05-26 20:26)
