--- a/TODO
+++ b/TODO
@@ -30,10 +30,10 @@ General:
 	✔ Increase tracer precision around 0/90/180/270 angles @done(23-06-10 08:26)
 	✔ Bob-based slipgates @done(23-06-25 10:54)
 	✔ Prevent spawning slipgates around the edges @done(23-06-26 16:29)
+	✔ Entrance tiles - exit to hub @done(23-06-26 16:42)
 	☐ Increase tracer precision in steep angles, e.g. shooting floor on the ground (high-precision sin() for generating tables?)
 	☐ Show where portal will be opened (realtime tracing)?
 	☐ Multi-bob character body
-	☐ Entrance tiles - exit to hub
 	☐ Bigger max velocity
 	☐ Turret shot frame
 	✘ Abyss - tile that kills players and objects, invisible 3 rows under map? @cancelled(23-05-28 11:26)
