--- a/TODO
+++ b/TODO
@@ -31,6 +31,7 @@ General:
 	✔ Bob-based slipgates @done(23-06-25 10:54)
 	✔ Prevent spawning slipgates around the edges @done(23-06-26 16:29)
 	✔ Entrance tiles - exit to hub @done(23-06-26 16:42)
+	✔ Add X offset between body hitbox and player bob @done(23-06-26 16:50)
 	☐ Increase tracer precision in steep angles, e.g. shooting floor on the ground (high-precision sin() for generating tables?)
 	☐ Show where portal will be opened (realtime tracing)?
 	☐ Multi-bob character body
