--- a/TODO
+++ b/TODO
@@ -32,12 +32,15 @@ General:
 	✔ Prevent spawning slipgates around the edges @done(23-06-26 16:29)
 	✔ Entrance tiles - exit to hub @done(23-06-26 16:42)
 	✔ Add X offset between body hitbox and player bob @done(23-06-26 16:50)
-	✔ Upgrade steep angle shooting precision with high-precision sin() precalc @done(23-06-26 16:58)
-	☐ Increase tracer precision in steep angles, e.g. shooting floor on the ground
+	✔ Upgrade steep angle tracer precision with high-precision sin() precalc @done(23-06-26 16:58)
+	✔ White frames when damaged @done(23-06-27 17:21)
+	☐ Upgrade steep angle tracer precision, e.g. shooting floor on the ground
 	☐ Show where portal will be opened (realtime tracing)?
 	☐ Multi-bob character body
 	☐ Bigger max velocity
 	☐ Turret shot frame
+	☐ Damage feedback with palette effects
+	☐ Regenerate life over time
 	✘ Abyss - tile that kills players and objects, invisible 3 rows under map? @cancelled(23-05-28 11:26)
 
 Game flow:
