--- a/TODO
+++ b/TODO
@@ -34,11 +34,11 @@ General:
 	✔ Add X offset between body hitbox and player bob @done(23-06-26 16:50)
 	✔ Upgrade steep angle tracer precision with high-precision sin() precalc @done(23-06-26 16:58)
 	✔ White frames when damaged @done(23-06-27 17:21)
+	✔ Turret shot frame @done(23-06-27 17:48)
 	☐ Upgrade steep angle tracer precision, e.g. shooting floor on the ground
 	☐ Show where portal will be opened (realtime tracing)?
 	☐ Multi-bob character body
 	☐ Bigger max velocity
-	☐ Turret shot frame
 	☐ Damage feedback with palette effects
 	☐ Regenerate life over time
 	✘ Abyss - tile that kills players and objects, invisible 3 rows under map? @cancelled(23-05-28 11:26)
