--- a/TODO
+++ b/TODO
@@ -51,10 +51,10 @@ Game flow:
 	✔ Faster map restarts without file reload @done(23-06-13 18:39)
 	✔ Level selection hub @done(23-06-16 22:24)
 	✔ Menu @done(23-06-29 16:08)
+	✔ Credits @done(23-06-30 16:38)
 	☐ Fade during loadings
 	☐ Attract mode?
 	☐ Intro/outro screen
-	☐ Credits
 	☐ LMC/ACE logos
 
 Editor:
