added ACE/LMC logos

--- a/TODO
+++ b/TODO
@@ -53,9 +53,10 @@ Game flow:
 	✔ Menu @done(23-06-29 16:08)
 	✔ Credits @done(23-06-30 16:38)
 	✔ Fade during loadings @done(23-06-30 21:47)
+	✔ Intro/outro screen @done(23-07-01 11:34)
+	✔ LMC/ACE logos @done(23-07-01 11:48)
+	☐ Menu: continue
 	☐ Attract mode?
-	☐ Intro/outro screen
-	☐ LMC/ACE logos
 
 Editor:
 	☐ Editable story text
