--- a/TODO
+++ b/TODO
@@ -56,7 +56,7 @@ Game flow:
 	✔ Fade during loadings @done(23-06-30 21:47)
 	✔ Intro/outro screen @done(23-07-01 11:34)
 	✔ LMC/ACE logos @done(23-07-01 11:48)
-	☐ Menu: continue
+	✔ Menu: continue @done(23-07-02 08:53)
 	☐ Attract mode?
 
 Editor:
